--- a/.banzaicloud/charts/spotguide-modern-go-application/templates/mysql-secret.yaml
+++ b/.banzaicloud/charts/spotguide-modern-go-application/templates/mysql-secret.yaml
@@ -13,7 +13,7 @@ metadata:
     app.kubernetes.io/part-of: {{ include "spotguide-modern-go-application.name" . }}
 type: Opaque
 data:
-  mysql-username:  {{ required "MySQL user is required" .Values.mysql.user | b64enc | quote }}
+  mysql-username:  {{ required "MySQL user is required!" .Values.mysql.user | b64enc | quote }}
   {{- if .Values.mysql.password }}
   mysql-password:  {{ .Values.mysql.pass | b64enc | quote }}
   {{ else }}
