--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,31 @@ services:
     redis:
         image: redis:4.0
 
+    dockerhost:
+        image: qoomon/docker-host:2.1.0
+        cap_add: [ 'NET_ADMIN', 'NET_RAW' ]
+
+    prometheus:
+        image: prom/prometheus:v2.6.1
+        volumes:
+            - ./etc/prometheus/:/etc/prometheus/
+        command:
+            - '--config.file=/etc/prometheus/prometheus.yml'
+            - '--storage.tsdb.path=/prometheus'
+            - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+            - '--web.console.templates=/usr/share/prometheus/consoles'
+            - '--storage.tsdb.retention=200h'
+            - '--web.enable-lifecycle'
+
+    grafana:
+        image: grafana/grafana:5.4.3
+        depends_on:
+            - prometheus
+        environment:
+            GF_USERS_ALLOW_SIGN_UP: "false"
+        volumes:
+            - ./etc/grafana/provisioning:/etc/grafana/provisioning
+
     jaeger:
         image: jaegertracing/all-in-one:latest
         environment:
