--- a/docker-compose.override.yml.dist
+++ b/docker-compose.override.yml.dist
@@ -5,19 +5,19 @@ services:
         ports:
             - 3306:3306
         volumes:
-            - ./.docker/volumes/mysql:/var/lib/mysql
+            - ./var/docker/volumes/mysql:/var/lib/mysql
 
     prometheus:
         ports:
             - 9090:9090
         volumes:
-            - ./.docker/volumes/prometheus:/prometheus
+            - ./var/docker/volumes/prometheus:/prometheus
 
     grafana:
         ports:
             - 3000:3000
         volumes:
-            - ./.docker/volumes/grafana:/var/lib/grafana
+            - ./var/docker/volumes/grafana:/var/lib/grafana
 
     jaeger:
         ports:
