--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
-image: golang:1.11.4
+image: golang:1.11.5
 
 variables:
     PROJECT_NAME: github.com/sagikazarmark/modern-go-application
-    DOCKER_IMAGE: registry.gitlab.com/${CI_PROJECT_PATH}
+    DOCKER_IMAGE: registry.gitlab.com/${CI_PROJECT_PATH_SLUG}
 
 stages:
     - dependencies
@@ -25,29 +25,25 @@ cache:
 
 dependencies:
     stage: dependencies
-    script:
-        - make vendor
+    script: make vendor
 
 test:
     stage: test
-    script:
-        - make test
+    script: make test
     artifacts:
         reports:
             junit: build/test_results/main/results.xml
 
 test-integration:
     stage: test
-    script:
-        - make test-integration
+    script: make test-integration
     artifacts:
         reports:
             junit: build/test_results/integration/results.xml
 
 lint:
     stage: test
-    script:
-        - make lint
+    script: make lint
 
 .build: &build_definition
     stage: build
