--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: golang:1.11.5
 
 variables:
     PROJECT_NAME: github.com/sagikazarmark/modern-go-application
-    DOCKER_IMAGE: registry.gitlab.com/${CI_PROJECT_PATH_SLUG}
+    DOCKER_IMAGE: registry.gitlab.com/${CI_PROJECT_PATH}
 
 stages:
     - dependencies
