--- a/config.toml.dist
+++ b/config.toml.dist
@@ -14,6 +14,9 @@ enabled = false
 
 [instrumentation.jaeger]
 enabled = false
+
+# Configure either collectorEndpoint or agentEndpoint.
+# When both are configured collectorEndpoint will take precedence and the exporter will report directly to the collector.
 collectorEndpoint = "http://localhost:14268/api/traces?format=jaeger.thrift"
 agentEndpoint = "localhost:6831"
 # username = ""
