--- a/Dockerfile.debug
+++ b/Dockerfile.debug
@@ -2,16 +2,15 @@ ARG GO_VERSION=1.11.5
 
 FROM golang:${GO_VERSION}-alpine AS builder
 
-RUN apk add --update --no-cache ca-certificates git
+RUN apk add --update --no-cache git
 
 RUN go get github.com/derekparker/delve/cmd/dlv
 
 
 FROM alpine:3.8
 
-RUN apk add --update --no-cache libc6-compat
+RUN apk add --update --no-cache ca-certificates tzdata libc6-compat
 
-COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /go/bin/dlv /
 
 ARG BUILD_DIR
