--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,11 +1,6 @@
-FROM alpine:3.8 AS builder
-
-RUN apk add --update --no-cache ca-certificates
-
-
 FROM alpine:3.8
 
-COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+RUN apk add --update --no-cache ca-certificates tzdata
 
 ARG BUILD_DIR
 ARG BINARY_NAME
