--- a/.banzaicloud/pipeline.yaml
+++ b/.banzaicloud/pipeline.yaml
@@ -42,7 +42,7 @@ pipeline:
     image: banzaicloud/ci-pipeline-client:0.10
     action: InstallSecret
     clusterSecret:
-      name: '{{ .CICD_REPO_NAME }}-mysql'
+      name: '{{ .CICD_REPO_NAME }}-mysql-user'
       # sourceSecretName:
       namespace: default
       merge: true
@@ -76,7 +76,7 @@ pipeline:
     image: banzaicloud/ci-pipeline-client:0.10
     action: EnsureDeployment
     deployment:
-      name: './spotguide-modern-go-application-0.1.0.tgz'
+      name: './spotguide-modern-go-application-0.2.0.tgz'
       reuseValues: true
       releaseName: '{{ .CICD_REPO_NAME }}'
       wait: true
@@ -106,6 +106,6 @@ pipeline:
           {{{{- if .pipeline.install_mysql_root_password_secret.clusterSecret.sourceSecretName }}}}
           existingSecret: '{{ .CICD_REPO_NAME }}-mysql-root-password'
           {{{{- end }}}}
-          existingUserSecret: '{{ .CICD_REPO_NAME }}-mysql'
+          existingUserSecret: '{{ .CICD_REPO_NAME }}-mysql-user'
           metrics:
             enabled: true
