--- a/.golangci.yml
+++ b/.golangci.yml
@@ -7,6 +7,9 @@ linters:
     disable:
         - maligned
 
+        # TODO: fix this
+        - dupl
+
 linters-settings:
     golint:
         min-confidence: 0.1
