Fix docker files

--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -7,5 +7,5 @@ ARG BINARY_NAME
 
 COPY $BUILD_DIR/$BINARY_NAME /app
 
-EXPOSE 8000 10000
-CMD ["/app", "--instrumentation.addr", ":10000", "--app.addr", ":8000"]
+EXPOSE 8000 8001 10000
+CMD ["/app", "--instrumentation.addr", ":10000", "--app.httpAddr", ":8000", "--app.grpcAddr", ":8001"]
