--- a/Dockerfile.debug
+++ b/Dockerfile.debug
@@ -18,5 +18,5 @@ ARG BINARY_NAME
 
 COPY $BUILD_DIR/$BINARY_NAME /app
 
-EXPOSE 8000 10000 40000
-CMD ["/dlv", "--listen=:40000", "--headless=true", "--api-version=2", "--log", "exec", "--", "/app", "--instrumentation.addr", ":10000", "--app.addr", ":8000"]
+EXPOSE 8000 8001 10000 40000
+CMD ["/dlv", "--listen=:40000", "--headless=true", "--api-version=2", "--log", "exec", "--", "/app", "--instrumentation.addr", ":10000", "--app.httpAddr", ":8000", "--app.grpcAddr", ":8001"]
