Separate application imports from third-party imports
Closes #51

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -10,3 +10,5 @@ linters:
 linters-settings:
     golint:
         min-confidence: 0.1
+    goimports:
+        local-prefixes: github.com/sagikazarmark/modern-go-application
