Add idea code style to git

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 !/.vscode/launch.json
 !/.vscode/tasks.json
 /.idea/*
+!/.idea/codeStyles/
 !/.idea/copyright/
 !/.idea/*.iml
 !/.idea/externalDependencies.xml
