--- a/Dockerfile.debug
+++ b/Dockerfile.debug
@@ -1,15 +1,13 @@
-ARG GO_VERSION=1.12
-
-FROM golang:${GO_VERSION}-alpine AS builder
+FROM golang:1.12.3-alpine AS builder
 
 RUN apk add --update --no-cache git
 
 RUN go get github.com/derekparker/delve/cmd/dlv
 
 
-FROM alpine:3.9
+FROM alpine:3.9.3
 
-RUN apk add --update --no-cache ca-certificates tzdata libc6-compat
+RUN apk add --update --no-cache ca-certificates tzdata bash curl libc6-compat
 
 COPY --from=builder /go/bin/dlv /
 
