--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,8 @@
 /config.*
 !config.toml.dist
 /docker-compose.override.yml
+/var/
 /vendor/
-
-/var/*
-!/var/docker
-/var/docker/*
-!/var/docker/volumes
-/var/docker/volumes/*
-!/var/docker/volumes/.gitkeep
-!/var/log
-/var/log/*
-!/var/log/.gitkeep
 
 # IDE integration
 /.vscode/*
